@@ -915,22 +915,21 @@ commas and parentheses."
             (newline out) (format out "  return flags;") (newline out)
             (format out "}") (newline out)))
     (newline out)
-    (loop :with table-struct-printed-p = nil :for ch :across *checkers*
+    (loop :for ch :across *checkers*
       :for type-tag = (objdef-tag (checker-type-odef ch))
       :for c-name = (checker-name ch) :for c-type = (checker-type ch)
+      :initially
+      (format out "struct c_lisp_pair {int c_const; gcv_object_t *l_const;};")
+      (newline out) (newline out)
       :do (with-conditional (out (checker-cond-stack ch))
-            (unless table-struct-printed-p
-              (setq table-struct-printed-p t)
-              (format out "struct c_lisp_pair {int c_const; gcv_object_t *l_const;};")
-              (newline out) (newline out))
             (format out "static struct c_lisp_pair ~A_table[] = {" c-name)
             (newline out)
             (loop :for name :in (checker-cpp-names ch)
               :for odef :in (checker-cpp-odefs ch)
               :do (unless c-type (format out " #ifdef ~A" name) (newline out))
-                  (format out "  { ~A, &(O(~A)) }," name (objdef-tag odef))
-                  (newline out)
-                  (unless c-type (format out " #endif") (newline out)))
+              (format out "  { ~A, &(O(~A)) }," name (objdef-tag odef))
+              (newline out)
+              (unless c-type (format out " #endif") (newline out)))
             (format out "  { 0, NULL }") (newline out)
             (format out "};") (newline out)
             (format out "const uintL ~A_table_size = ((sizeof(~A_table)-1)/sizeof(struct c_lisp_pair));" c-name c-name) (newline out)
