@@ -1,3 +1,8 @@
+2004-07-30  Sam Steingold  <sds@gnu.org>
+
+	* utils/modprep.lisp (print-tables-1): print the definition
+	of "struct c_lisp_pair" outside of WITH-CONDITIONAL
+
 2004-06-10  Bruno Haible  <bruno@clisp.org>
 
 	* init.lisp: Export method, standard-method, method-function,
